--- a/bibliography.bib
+++ b/bibliography.bib
@@ -270,3 +270,14 @@
   year = {2014},
   keywords = {pic},
 }
+
+@BOOK{lit:craig,
+  title = {Introduction to Robotics},
+  publisher = {Addison-Wesley Publishing Company},
+  year = {1989},
+  author = {John J. Craig},
+  edition = {2},
+  month = {},
+  ISBN = {0-201-09528-9},
+  keywords = {lit},
+}
