--- a/glossary.tex
+++ b/glossary.tex
@@ -54,3 +54,9 @@
 %
 % Gradientenverfahren
 \newglossaryentry{g:gradientenvefahren}{name=Gradientenvefahren, description={Verfahren bei Optimierungen. Dabei wird der  angenäherter Wert stets in die Richtung des negativen Gradienten korrigiert (Methode des steilsten Abstieges)}}
+%
+% Body frame
+\newglossaryentry{g:bodyframe}{name=\glqq body frame\grqq\ , description={Das objektbezogene Koordinatensystem des myRIO}}
+%
+% world Frame
+\newglossaryentry{g:worldframe}{name=\glqq world frame\grqq\ , description={Das festes Referenzsystem der Erde}}
