add structure for the section Implementierung

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -261,7 +261,6 @@
   keywords = {lit},
 }
 
-
 @ONLINE{img:knie,
   url = {http://www.fachaerztezentrum.ch/Knie.htm},
   title = {Knie},
@@ -279,5 +278,15 @@
   edition = {2},
   month = {},
   ISBN = {0-201-09528-9},
+  keywords = {lit},
+}
+
+
+@ONLINE{lit:labview_matlab,
+  url = {http://zone.ni.com/reference/en-XX/help/371361J-01/gmath/matlab_script_node/},
+  title = {MATLAB script},
+  author = {National Instruments},
+  urldate = {2014-06-24},
+  year = {2014},
   keywords = {lit},
 }
